@@ -59,10 +59,11 @@ class LogPager extends ReverseChronologicalPager {
 	 * @param int|bool $month The month to start from. Default: false
 	 * @param string $tagFilter Tag
 	 * @param string $action Specific action (subtype) requested
+	 * @param int $logId Log entry ID, to limit to a single log entry.
 	 */
 	public function __construct( $list, $types = [], $performer = '', $title = '',
 		$pattern = '', $conds = [], $year = false, $month = false, $tagFilter = '',
-		$action = ''
+		$action = '', $logId = false
 	) {
 		parent::__construct( $list->getContext() );
 		$this->mConds = $conds;
@@ -75,6 +76,7 @@ class LogPager extends ReverseChronologicalPager {
 		$this->limitAction( $action );
 		$this->getDateCond( $year, $month );
 		$this->mTagFilter = $tagFilter;
+		$this->limitLogId( $logId );
 
 		$this->mDb = wfGetDB( DB_REPLICA, 'logpager' );
 	}
@@ -287,6 +289,17 @@ class LogPager extends ReverseChronologicalPager {
 				$this->action = $action;
 			}
 		}
+	}
+
+	/**
+	 * Limit to the (single) specified log ID.
+	 * @param int $logId The log entry ID.
+	 */
+	protected function limitLogId( $logId ) {
+		if ( !$logId ) {
+			return;
+		}
+		$this->mConds['log_id'] = $logId;
 	}
 
 	/**
