@@ -24,6 +24,7 @@ This is a security and maintenance release of the MediaWiki 1.30 branch.
 * (T143790) Make $wgEmailConfirmToEdit only affect edit actions.
 * (T193995) Fix undefined patchPath() method call in parser tests.
 * Special:BotPasswords now requires reauthentication.
+* (T191608, T187638) Add 'logid' parameter to Special:Log.
 
 == MediaWiki 1.30 ==
 
